Host family report column in step 2 alignment issue

--- a/static/system/css/ge-system.css
+++ b/static/system/css/ge-system.css
@@ -1755,3 +1755,7 @@ cursor: not-allowed;
 .fa.fa-bookmark.mr-lg.dark-gray.matchStatusGrey {
     color: #9e9e9e;
 }
+
+.panel-body.margin-minus .checkbox label{
+    display:inherit;
+}
